# omnilingual-asr

./: .gitignore  README.md  gettysburg.eaf  omni-elan.sh  omnilingual-elan.cmdi  pyproject.toml  samuel_lisu.eaf  wrangler.toml
.conda/envs/omniasr/conda-meta/: _openmp_mutex-4.5-7_kmp_llvm.json  created_at  gettext-0.21.1-h0186832_0.json  history  icu-78.2-h38cb7af_0.json  libasprintf-0.25.1-h493aca8_0.json  libasprintf-devel-0.25.1-h493aca8_0.json  libblas-3.11.0-5_h51639a9_openblas.json  libcblas-3.11.0-5_hb0561ab_openblas.json  libexpat-2.7.3-h50f4ffc_4.json  libffi-3.4.4-hca03da5_1.json  libflac-1.3.4-h07bb92c_0.json  libgcc-15.2.0-hcbb3090_16.json  libgfortran-15.2.0-h07b0088_16.json  libgfortran5-15.2.0-hdae7583_16.json  libiconv-1.17-h0d3ecfb_2.json  liblapack-3.11.0-5_hd9741b5_openblas.json  libogg-1.3.5-h48c0fde_1.json  libopenblas-0.3.30-openmp_ha158390_4.json  libopus-1.6.1-h1a92334_0.json  libsndfile-1.0.31-h9f76cd9_1.json  libsqlite-3.51.2-h1ae2325_0.json  libvorbis-1.3.7-h81086ad_2.json  llvm-openmp-21.1.8-h4a912ad_0.json  ncurses-6.5-hee39554_0.json  numpy-2.4.1-py311had1e860_0.json  (+10 more)
functions/api/: _auth.js  _gemini.js  _groq.js  _history.js  _middleware.js  history.js  transcribe-batch-stream.js  transcribe-stream.js  transcribe.js
functions/api/audio/: [id].js
functions/api/auth/: login.js  me.js  register.js
functions/api/history/: [id].js
migrations/: 0001_init.sql  0002_session_key.sql  0003_users.sql
public/: index.html
public/static/: app.js  style.css
src/omnilingual_asr/: __init__.py
src/omnilingual_asr/diarization/: __init__.py  pipeline.py
src/omnilingual_asr/elan/: __init__.py  eaf.py
src/omnilingual_asr/models/: README.md  __init__.py
tests/unit/: test_diarization_pipeline.py
workflows/diarization/: README.md  diarize_transcribe.py
workflows/diarization/libiconv_shim/: iconv_shim.c
workflows/wav2elan_web/: README.md  app.py
workflows/wav2elan_web/static/: app.js  index.html  style.css
(+161 files in other folders)
