[build-system]
requires = ["packaging~=23.1", "setuptools~=67.8", "wheel~=0.40"]
build-backend = "setuptools.build_meta"

[project]
name = "omnilingual_asr"
dynamic = ["version"]
description = "Omnilingual ASR - Speech transcription using Gemini API"
authors = [{name = "Meta AI Research"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "speech recognition", "ASR", "automatic speech recognition",
    "multilingual", "omnilingual", "transcription",
    "speech-to-text", "audio processing", "gemini",
    "diarization", "speaker identification",
    "audio transcription", "voice recognition"
]

classifiers=[
    "Topic :: Scientific/Engineering",
    "Development Status :: 4 - Beta",
]

requires-python = ">=3.10,<3.14"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
  web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
  ]
  dev = [
    "black~=25.1",
    "flake8~=7.1",
    "flake8-pyi~=24.6",
    "flake8-pyproject~=1.2",
    "isort~=6.0",
    "mypy~=1.15.0",
    "pytest~=8.3",
  ]

[project.urls]
  Source = "https://github.com/facebookresearch/omnilingual-asr"
  Tracker = "https://github.com/facebookresearch/omnilingual-asr/issues"

[tool.setuptools.dynamic]
version = {attr = "omnilingual_asr.__version__"}

[tool.setuptools.package-data]
"omnilingual_asr" = ["py.typed"]

[tool.flake8]
extend_ignore = ["E", "Y"]  # Black

[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = "type-abstract,typeddict-unknown-key"
disallow_untyped_calls = false
disallow_untyped_decorators = false
files = "src,tests"
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
warn_unused_configs = false
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = ["tests"]
